Fix white space on photos page

--- a/src/Components/Pages/PhotosPage/photos.css
+++ b/src/Components/Pages/PhotosPage/photos.css
@@ -30,3 +30,15 @@ body {
   padding-top: 100px;
   margin-left: 11%;
 }
+
+@media (max-width: 1059px) {
+  .photospage-background {
+    margin-top: 75px;
+  }
+}
+
+@media (max-width: 700px) {
+  .photospage-background {
+    margin-top: 50px;
+  }
+}
